# eeg-slowing-transportability

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATA_LICENSES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: study.yaml
docs/: amendment_v1_1_results.md  amendment_v1_2_results.md  ed_freedman_pi_brief.md  reproducibility.md  submission_readiness.md  transportability_pivot.md  transportability_results.md
manuscript/: PI_Brief_Ed_Freedman_AD_FTD_EEG_Study.docx  build_pi_brief.py  main.md  transportability_external_validation.md
outputs/: data_validation.json  manuscript_values.json
outputs/amendment_v1_1/: external_participant_predictions.csv  external_results.json  internal_participant_predictions.csv  internal_results.json  internal_tuning.csv  table_external_models.csv  table_internal_models.csv
outputs/amendment_v1_2/: feature_selection_frequency.csv  inner_tuning.csv  outer_predictions.csv  photic_response_features.csv  photic_response_summary.json  results.json  table_models.csv
outputs/deep/: summary.json
outputs/deep/checkpoints/: repeat-01_fold-1.pt  repeat-01_fold-3.pt  repeat-03_fold-0.pt  repeat-03_fold-2.pt  repeat-04_fold-0.pt  repeat-04_fold-4.pt  repeat-05_fold-0.pt  repeat-05_fold-1.pt  repeat-05_fold-2.pt  repeat-05_fold-4.pt  repeat-06_fold-1.pt  repeat-06_fold-2.pt  repeat-07_fold-2.pt  repeat-07_fold-3.pt  repeat-07_fold-4.pt  repeat-08_fold-1.pt  repeat-08_fold-2.pt  repeat-08_fold-4.pt  repeat-09_fold-0.pt  repeat-09_fold-1.pt  repeat-09_fold-4.pt
outputs/manifests/: classical_prediction.json  reporting.json
outputs/mechanistic/: regional_features.csv  summary.json
outputs/prediction/: frozen_subject_splits.csv
outputs/reporting/: table_demographics.csv
outputs/reproduction/: channel_complexity.csv  summary.json
outputs/state/: paired_state_features.csv  photic_frequency_features.csv
outputs/transportability/: derivation_features.csv  external_padic_features.csv  external_validation_results.json
project/: .gitignore  CITATION.cff  README.md
project/.github/workflows/: ci.yml
project/docs/: literature_and_positioning.md  preregistration.md  submission_readiness.md
project/manuscript/: build_docx.py  rostrocaudal_eeg_validity_audit.docx
project/outputs/deep/: outer_predictions.csv  training_summary.csv
project/outputs/deep/checkpoints/: repeat-00_fold-0.pt  (+28 more)
project/outputs/manifests/: deep_prediction.json  mechanistic.json  reproduction.json  state.json
project/outputs/mechanistic/: channel_features.csv
project/outputs/prediction/: classical_inner_tuning.csv  classical_outer_predictions.csv  classical_summary.json
project/outputs/reporting/: table_hypotheses.csv  table_models.csv
project/outputs/reproduction/: regional_complexity.csv
project/outputs/state/: summary.json
project/src/rcd/: __init__.py  cli.py  config.py  data.py  manifest.py  prediction.py
project/src/rostrocaudal_dementia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
project/tests/: test_prediction.py  test_spectra.py  test_surrogates.py
src/rcd/: __init__.py  complexity.py  deep_prediction.py  download.py  mechanistic.py  reporting.py  reproduction.py  spectra.py  state.py  surrogates.py
src/rcd/models/: __init__.py  eegnet.py
tests/: test_amendment_v1_2.py  test_complexity.py  test_data.py  test_download.py  test_eegnet.py  test_events.py  test_photic_response.py  test_transportability.py
transportability/: README.md  __init__.py  amendment_v1_1.md  amendment_v1_2.md  derive_features.py  download_padic.py  eeg_features.py  extract_features.py  photic_response_features.py  protocol.md  run_amendment_analysis.py  run_amendment_v1_2.py  run_external_validation.py
