[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rostrocaudal-eeg-dementia"
version = "0.1.0"
description = "Spectral-surrogate and leakage-safe analysis of rostrocaudal EEG complexity in AD and FTD"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [{name = "Reuben Noronha"}]
dependencies = [
  "antropy>=0.1.9",
  "eeglabio>=0.1.0",
  "joblib>=1.4",
  "matplotlib>=3.9",
  "mne>=1.9",
  "numpy>=2.0,<3",
  "pandas>=2.2",
  "pingouin>=0.5.5",
  "pyyaml>=6.0",
  "scikit-learn>=1.6",
  "scipy>=1.14",
  "seaborn>=0.13",
  "specparam>=2.0.0rc3",
  "statsmodels>=0.14",
  "tqdm>=4.67",
  "typer>=0.15",
]

[project.optional-dependencies]
ml = [
  "torch>=2.6",
]
dev = [
  "mypy>=1.14",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.9",
]

[project.scripts]
rcd = "rcd.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
