[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-slowing-transportability"
version = "0.2.0"
description = "Transportability and paired photic-response analysis of compact EEG markers in AD, FTD, and controls"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [{name = "Reuben Noronha"}]
keywords = ["EEG", "Alzheimer disease", "frontotemporal dementia", "transportability", "photic stimulation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "antropy>=0.1.9",
  "eeglabio>=0.1.0",
  "h5py>=3.16",
  "joblib>=1.4",
  "matplotlib>=3.9",
  "mne>=1.9",
  "numpy>=2.0,<3",
  "pandas>=2.2",
  "pingouin>=0.5.5",
  "pyyaml>=6.0",
  "requests>=2.32",
  "scikit-learn>=1.6",
  "scipy>=1.14",
  "seaborn>=0.13",
  "specparam>=2.0.0rc3",
  "statsmodels>=0.14",
  "tqdm>=4.67",
  "typer>=0.15",
]

[project.optional-dependencies]
ml = [
  "torch>=2.6",
]
dev = [
  "mypy>=1.14",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.9",
]

[project.scripts]
rcd = "rcd.cli:app"
eeg-download-padic = "transportability.download_padic:main"
eeg-derive-locked = "transportability.derive_features:main"
eeg-extract-padic = "transportability.extract_features:main"
eeg-external-validate = "transportability.run_external_validation:main"
eeg-amend-v1-1 = "transportability.run_amendment_analysis:main"
eeg-photic-features = "transportability.photic_response_features:main"
eeg-amend-v1-2 = "transportability.run_amendment_v1_2:main"

[project.urls]
Homepage = "https://github.com/noronhareuben1/eeg-slowing-transportability"
Repository = "https://github.com/noronhareuben1/eeg-slowing-transportability"
Issues = "https://github.com/noronhareuben1/eeg-slowing-transportability/issues"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["rcd*", "transportability*"]
exclude = ["project*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --basetemp=.pytest_tmp"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
